tests/baselines/reference/moduleAugmentationsImports2.errors.txt
error TS5101: Option 'out' is deprecated and will stop functioning in TypeScript 5.5. Specify compilerOption '"ignoreDeprecations": "5.0"' to silence this error.
  Use 'outFile' instead.
d.ts(6,1): error TS2322: Type '() => undefined' is not assignable to type '() => B'.
  Type 'undefined' is not assignable to type 'B'.
e.ts(4,1): error TS2322: Type '() => undefined' is not assignable to type '() => Cls'.
  Type 'undefined' is not assignable to type 'Cls'.
main.ts(6,9): error TS2454: Variable 'a' is used before being assigned.
main.ts(7,9): error TS2454: Variable 'a' is used before being assigned.


!!! error TS5101: Option 'out' is deprecated and will stop functioning in TypeScript 5.5. Specify compilerOption '"ignoreDeprecations": "5.0"' to silence this error.
!!! error TS5101:   Use 'outFile' instead.
==== a.ts (0 errors) ====
    export class A {}
    
==== b.ts (0 errors) ====
    export class B {x: number;}
    
==== c.d.ts (0 errors) ====
    declare module "C" {
        class Cls {y: string; }
    }
    
==== d.ts (1 errors) ====
    /// <reference path="c.d.ts"/>
    
    import {A} from "./a";
    import {B} from "./b";
    
    A.prototype.getB = function () { return undefined; }
    ~~~~~~~~~~~~~~~~
!!! error TS2322: Type '() => undefined' is not assignable to type '() => B'.
!!! error TS2322:   Type 'undefined' is not assignable to type 'B'.
    
    declare module "./a" {
        interface A {
            getB(): B;
        }
    }
    
==== e.ts (1 errors) ====
    import {A} from "./a";
    import {Cls} from "C";
    
    A.prototype.getCls = function () { return undefined; }
    ~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '() => undefined' is not assignable to type '() => Cls'.
!!! error TS2322:   Type 'undefined' is not assignable to type 'Cls'.
    
    declare module "./a" {
        interface A {
            getCls(): Cls;
        }
    }
    
==== main.ts (2 errors) ====
    import {A} from "./a";
    import "d";
    import "e";
    
    let a: A;
    let b = a.getB().x.toFixed();
            ~
!!! error TS2454: Variable 'a' is used before being assigned.
    let c = a.getCls().y.toLowerCase();
            ~
!!! error TS2454: Variable 'a' is used before being assigned.